--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -30,7 +30,7 @@
                 <div class="order-confirmation-wrapper p-2 border">
                     <div class="row">
                         <div class="col">
-                            <small class="text-muted">Order Info:</small>
+                            <small class="text-black">Order Info:</small>
                         </div>
                     </div>
 
@@ -54,7 +54,7 @@
 
                     <div class="row">
                         <div class="col">
-                            <small class="text-muted">Order Details:</small>
+                            <small class="text-black">Order Details:</small>
                         </div>
                     </div>
 
@@ -73,7 +73,7 @@
 
                     <div class="row">
                         <div class="col">
-                            <small class="text-muted">Delivering To:</small>
+                            <small class="text-black">Delivering To:</small>
                         </div>
                     </div>
 
@@ -157,7 +157,7 @@
 
                     <div class="row">
                         <div class="col">
-                            <small class="text-muted">Billing Info:</small>
+                            <small class="text-black">Billing Info:</small>
                         </div>
                     </div>
 
