--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -27,8 +27,8 @@
                         {% endif %}
                     </div>
                     <div class="col-9">
-                        <p class="my-0 small text-muted"><strong>{{ item.product.name }}</strong></p>
-                        <p class="my-0 small text-muted">Quantity: {{ item.quantity }}</p>
+                        <p class="my-0 small text-black"><strong>{{ item.product.name }}</strong></p>
+                        <p class="my-0 small text-black">Quantity: {{ item.quantity }}</p>
                     </div>
                 </div>
                 {% endfor %}
