--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -33,7 +33,7 @@
                         <div class="row">
                             <div class="col">
                                 {% include "basket/checkout-buttons.html" %}
-                                <p class="text-muted mb-5">A summary of your basket contents is below</p>
+                                <p class="text-black mb-5">A summary of your basket contents is below</p>
                             </div>
                         </div>
                         {% for item in basket_items %}
