favourite only shows when user logged in

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -64,10 +64,12 @@
                                 <div class="card-body pb-0">
                                     <p class="mb-0">{{ product.name }}
                                         <span class="favourite-heart">
-                                            {% if product.name in favourites %}
-                                                <a href="{% url 'remove_favourite' product.id user.id %}"><i class="fas fa-heart fa-2x"></i></a>
-                                            {% else %}
-                                                <a href="{% url 'add_favourite' product.id user.id %}"><i class="far fa-heart fa-2x"></i></a>
+                                            {% if user.is_authenticated %}
+                                                {% if product.name in favourites %}
+                                                    <a href="{% url 'remove_favourite' product.id user.id %}"><i class="fas fa-heart fa-2x"></i></a>
+                                                {% else %}
+                                                    <a href="{% url 'add_favourite' product.id user.id %}"><i class="far fa-heart fa-2x"></i></a>
+                                                {% endif %}
                                             {% endif %}
                                         </span>
                                     </p>
