--- a/static/css/base.css
+++ b/static/css/base.css
@@ -176,6 +176,7 @@ margin-top: 1rem !important;
 	left: 0;
 	position: fixed;
 	background: #f98787;
+    filter: brightness(150%);
 	z-index: -1;
 }
 
