pushing to heroku

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-    background: url('/media/sweets.jpeg') no-repeat center center fixed;
+    background: url('/media/sweets.jpeg') no-repeat center center fixed !important;
     background-size: cover;
     height: calc(100vh - 164px);
     color: #555;
