--- a/static/css/base.css
+++ b/static/css/base.css
@@ -4,10 +4,15 @@ html {
     height: 100%;
 }
 
-image {
+body {
     background: url('/media/sweets.jpeg') no-repeat center center fixed;
+    overflow: hidden;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
-    height: calc(100vh - 164px);
+    background-size: 100%;
+    background-color: pink;
     color: #555;
     font-family: 'Akshar';
 }
