stray end </i> tag deleted from products.html and other pages

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -139,7 +139,7 @@
     </div>
     <div class="bg-warning btt-button text-black shadow-sm rounded-0 border border-black">
         <a class="btt-link d-flex h-100 text-black">
-            <i class="fas fa-arrow-up text-black mx-auto my-auto"></i></i>
+            <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
         </a>
     </div>
 {% endblock %}
