--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -119,7 +119,7 @@
     </div>
     <div class="text-black bg-warning btt-button text-black shadow-sm rounded-0 border border-black">
         <a class="btt-link d-flex h-100 text-black">
-            <i class="fas fa-arrow-up text-black mx-auto my-auto"></i></i>
+            <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
         </a>
     </div>
 {% endblock %}
