--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -12,6 +12,7 @@
 {% block content %}
 
 <div class="container-fluid">
+    <div class="hero-image"></div>
     <div class="container">
         <div class="row">
             <div class="col-7 col-md-6 my-auto">
