--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -172,7 +172,6 @@
                     </div>
                 </form>
             </div>
-        </div>
         {% else %}
         <div class="rows">
             <div class="col-6">
@@ -180,18 +179,19 @@
             </div>
         </div>
         {% endif %} 
+        </div>
     </div>
+
     <div class="form-group bg-warning btt-button text-black shadow-sm rounded-0 border border-black">
         <a class="btt-link d-flex h-100 text-black">
             <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
         </a>
     </div>
-
 {% endblock %}
 
 {% block postloadjs %}
 {{ block.super }}
-<script type="text/javascript">
+<script>
     $('.btt-link').click(function(e) {
         window.scrollTo(0,0)
     })
