--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -152,13 +152,13 @@
           }
         }
     </script>    
-    <script type="text/javascript">
+    <script>
 		$('.btt-link').click(function(e) {
 			window.scrollTo(0,0)
 		})
 	</script>
     
-    <script type="text/javascript">
+    <script>
         $('#sort-selector').change(function() {
             let selector = $(this);
             let currentUrl = new URL(window.location);
