--- a/static/css/base.css
+++ b/static/css/base.css
@@ -10,6 +10,7 @@ body {
     height: calc(100vh - 164px);
     color: #555;
     font-family: 'Lato';
+    overflow-x: hidden;
 }
 
 /* from Bulma - copied from Boutique Ado*/
@@ -213,6 +214,10 @@ input[name='q']::placeholder {
 }
 
 /* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
+a.btt-link.d-flex.h-100.text-black {
+    width: 40px !important;
+    }
+
 .arrow-up {
     width: 0; 
     height: 0; 
