--- a/templates/base.html
+++ b/templates/base.html
@@ -132,7 +132,7 @@
     </footer>
 
     {% block postloadjs %}
-        <script type="text/javascript">
+        <script>
             $('.toast').toast('show');
         </script>
     {% endblock %}
