--- a/templates/allauth/account/email.html
+++ b/templates/allauth/account/email.html
@@ -59,7 +59,7 @@
 
 
 {% block extra_body %}
-<script type="text/javascript">
+<script>
 (function() {
   let message = "{% trans 'Do you really want to remove the selected e-mail address?' %}";
   let actions = document.getElementsByName('action_remove');
