--- a/templates/base.html
+++ b/templates/base.html
@@ -55,12 +55,13 @@
                 <form class="center-me" method="GET" action="{% url 'products' %}">
                     <div class="input-group w-100">
                         <input class="form-control rounded-0" type="text" name="q" placeholder="Search our site">
-                        <label>Search our site</label>
                         <div class="input-group-append">
-                            <button class="form-control bg-warning btn border" text="submit your search" type="submit">
-                                <span class="icon">
-                                    <i class="fas fa-search"></i>
-                                </span>
+                            <button class="form-control bg-warning btn border" type="submit">
+                                <label>
+                                    <span class="icon">
+                                        <i class="fas fa-search"></i>
+                                    </span>
+                                </label>
                             </button>
                         </div>
                     </div>
